Swagger + delete
